# fast-md-x

./: .gitignore  .npmrc  AGENTS.legacy.md  AGENTS.md  CHANGELOG.md  README.md  astro.config.mjs  biome.json  fastmd.config.sample.yml  fastmd.phase1.spec.yml  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.types.json
.githooks/: pre-commit
.github/: pull_request_template.md
.github/workflows/: deploy.yml  fastmd-metrics.yml  native-prebuild.yml  publish.yml  release.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
bench/: run.mjs  transform-test.mjs
benchmarks/: native-performance.cjs
docs/: native-build.md
engines/sidecar/: Cargo.toml
engines/sidecar/src/: handlers.rs  main.rs  protocol.rs  utils.rs
engines/sidecar/src/parallel/: mod.rs  pool.rs  task.rs  worker.rs
examples/fastmd-vite/: README.md  (+3 more)
memory/: constitution.md
native/fastmd-native/: .gitignore  Cargo.toml  index.d.ts  index.js  package.json
native/fastmd-native/src/: lib.rs  markdown_transform.rs
schemas/: fastmd-log.schema.json
scripts/: bench-generate-pages.mjs  bench.mjs  bench.sh  create-new-feature.sh  gen-example-pages.mjs  native-smoke.sh  ndjson-to-metrics.mjs  print-digest.mjs  setup-git-hooks.sh  summarize-fastmd.mjs  validate-ndjson.mjs
templates/: plan-template.md  spec-strong-template.md  spec-template.md  tasks-template.md
tests/: README.md  _utils.ts  astro-integration-tests.md  cacache-store.test.ts  cache-behavior.test.ts  compute-key.test.ts  config-merge.test.ts  examples-minimal-smoke.test.ts  fastmd-cache.test.ts  internal-invariants.test.ts  normalization-regression.test.ts  ops-clear-cache.test.ts  ops-warmup.test.ts  test-types.ts
(+2285 files in other folders)
