[package]
name = "fastmd-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
pulldown-cmark = { version = "0.11", features = ["html"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "fastmd-sidecar"
path = "src/main.rs"